# pivpy

./: .buildinfo  .gitignore  .readthedocs.yml  CHANGES_SUMMARY.md  LICENSE  MANIFEST.in  README.md  README.rst  ToDo.md  genindex.html  includeme.html  index.html  intro.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  tmp.py  tutorial.html
.github/workflows/: pages.yml  python-publish.yml  test.yml  wheels.yml
_sources/: includeme.txt  index.txt  tutorial.txt
docs/: Makefile  make.bat  requirements.txt
docs/source/: Getting_Started.ipynb  Getting_Started.rst  api_reference.rst  basics.md  basics.rst  conf.py  contents.rst  index copy.rst  index.rst  intro.rst  modules.rst  notebook.ipynb  pivpy.rst  pivpy_data_model.rst  pivpy_faq.rst  pivpy_tutorial.rst  pivpy_visualization.rst  tutorial.ipynb  tutorial.rst
examples/: autocorrelation_example.py  parse_Insight_header.ipynb  xarray_trajectories.ipynb
examples/data/: B00050_ws[64, 64].npz  B00050_ws[64, 64].yaml  B00051_ws[64, 64].npz  B00051_ws[64, 64].yaml  B00052_ws[64, 64].npz  B00052_ws[64, 64].yaml  B00053_ws[64, 64].npz  B00053_ws[64, 64].yaml  B00054_ws[64, 64].npz  B00054_ws[64, 64].yaml  Run000001.T000.D000.P000.H001.L.vec  Run000002.T000.D000.P000.H001.L.vec  Run000003.T000.D000.P000.H001.L.vec  Run000004.T000.D000.P000.H001.L.vec  Run000005.T000.D000.P000.H001.L.vec
examples/notebooks/: Gamma1_Gamma2_tutorial.ipynb  Getting_Started.ipynb  Laskin_nozzle_jet_flowrate.ipynb  Untitled1.ipynb  VortexFittingTutorial.ipynb  example_methods.ipynb  example_read_VC7.ipynb  load_txt_plot_vorticity.ipynb  parse_Insight_header.ipynb  parse_header.ipynb  pivpy_example.ipynb  pivpy_example1.ipynb  plots.ipynb  read_plot_algae_PIV.ipynb  readim_vc7.ipynb  reading_various_files_example.ipynb  test.py  test_4columns.ipynb  test_graphics.ipynb  test_interpolate_nan.ipynb  test_reading_different_files.ipynb  test_strain.ipynb  test_urban_canopy.ipynb  testing_descriptor.ipynb  try_filter.ipynb  vortex.ipynb  ‏‏example_read_VC7.ipynb
pivpy/: __init__.py  compute_funcs.py  data_structures.py  davis.py  davis_readim.py  graphics.py  graphics_utils.py  graphics_vecpy.py  inter.py  interfacing.py  io.py  jobfile.py  load.py  loadvec.py  pivmat_compat.py  pivpy.py  process.py  read_vec_file.py  update.py  vecplot.py  weighted_median.py
pivpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pivpy/data/: 3C.VC7  exp1_001_b_noflt.txt
tests/: Untitled-1.ipynb  conftest.py  test_azprofile.py  test_batchf.py  test_bwfilterf.py  test_corr.py  test_corrf.py  test_extractf.py  test_filterf_pivmat.py  test_flipf.py  test_gamma.py  test_gradientf.py  test_graphics.ipynb  test_graphics.py  test_histf.py  test_im2pivmat.py  test_inter.py  test_interpf.py  test_interpolate_nan.ipynb  test_io.ipynb  test_io.py  test_jpdfscal.py  test_loadVec.py  test_methods.py  test_movie.py  test_openpivtxt.py  test_pivmat_compat_io_spectral_vortex.py  test_pivmat_compat_small.py  test_pivmat_missing_batch.py  test_probe_methods.py  test_process.py  test_spatiotempf.py  test_tempcorrf.py  test_update.py
tests/data/: 2C.VC7  B00002.txt  Run000003.T000.D000.P000.H001.L.vec  exp1_001_b.vec  (+2 more)
(+20 files in other folders)
