[project]
name = "pivpy"
version = "0.0.16"
authors = [
  { name="Alex Liberzon and Ron Shnapp", email="alex.liberzon@gmail.com" },
]
description = "Python package for post-processing PIV results"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
        "numpy",
        "scipy",
        "xarray",
        "matplotlib",
        "pytest",
]

keywords=["example documentation tutorial"]


[project.optional-dependencies]
readim = ["readim"]
netcdf = ["netcdf4"]
full = ["readim", "netcdf4"]

[project.urls]
"Homepage" = "https://github.com/alexlib/pivpy"
"Bug Tracker" = "https://github.com/alexlib/pivpy/issues"


[tool.setuptools]
include-package-data = true
