[project]
name = "pivpy"
version = "0.1.1"
authors = [
  { name="Alex Liberzon and Ron Shnapp", email="alex.liberzon@gmail.com" },
]
description = "Python package for post-processing PIV results"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
        "numpy",
        "scipy",
        "xarray",
  "netcdf4",
        "matplotlib",
        "pytest",
        "vortexfitting",
        "h5py",
        "nbformat>=5.8.0",
        "nbconvert>=7.6.0",
        "ipykernel>=6.16.2",
        "setuptools>=68.0.0",
        "openpiv>=0.25.1",
]

keywords=["example documentation tutorial"]


[project.optional-dependencies]
lvpyio = ["lvpyio"]
readim = ["readim"]
netcdf = ["netcdf4"]
vortexfitting = ["vortexfitting"]
h5py = ["h5py"]
full = ["lvpyio", "readim", "netcdf4", "vortexfitting", "h5py"]

[project.urls]
"Homepage" = "https://github.com/alexlib/pivpy"
"Bug Tracker" = "https://github.com/alexlib/pivpy/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pivpy*"]
exclude = ["README_files*", "docs*", "examples*", "tests*"]
